# cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.MD  dummy_change.txt  pyproject.toml  setup.py
.github/workflows/: create_pr.yml  install.yml  python-package.yml  test.yml
.github/workflows/docs/: check.md
cli/: cli.py
cli/commands/: __init__.py
cli/commands/create_project/: command.py
cli/commands/version/: __init__.py  command.py
cli/create_project/: __init__.py  command.py
tests/: __init__.py  pytest.ini
tests/commands/: __init__.py
tests/commands/create_project/integration/: test_integration.py
tests/commands/create_project/unit/: test_unit.py
