[project]
name = "neuragens-cli"
version = "1.0.1"
description = "The NeuraGens CLI is a command-line interface tool that you use to initialize, develop, scaffold, and maintain NeuraGens applications directly from a command shell."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Michael Douglas Barbosa Araujo", email = "michaeldouglas010790@gmail.com" },
]
requires-python = ">=3.7"
keywords = ["cli", "neuragens", "command-line", "scaffold"]

[project.optional-dependencies]
all = [
    "click>=8.1.7",
    "pre-commit >=2.17.0,<4.0.0",
    "pydantic>=1.7.4,!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0",
    "click-aliases>=1.0.4",
]
tests = ["pytest"]
docs = ["sphinx"]

[project.urls]
"Homepage" = "https://github.com/neuragens/cli"


[project.scripts]
neuragen = "cli.cli:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
